@@ -143,3 +143,4 @@ ATTR_logfilemaxsize,
 ATTR_logfilerolldepth,
 ATTR_nextjobnum,
 ATTR_tokens,
+ATTR_extraresc,
