@@ -176,7 +176,6 @@ char	       *path_nodes_new;
 char	       *path_nodestate;
 char	       *path_nodenote;
 char	       *path_nodenote_new;
-char	       *path_resources;
 extern char    *msg_daemonname;
 extern int	pbs_errno;
 char	       *pbs_o_host = "PBS_O_HOST";
